Render image with GPU proof-of-concept

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link data-trunk rel="copy-file" href="/src/watermark.png"/>
+  </head>
   <body></body>
 </html>
