Complete shader art test

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link data-trunk rel="copy-file" href="/src/watermark.png"/>
+    <link data-trunk rel="copy-file" href="/src/image.png"/>
   </head>
   <body></body>
 </html>
