--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link data-trunk rel="copy-file" href="/src/watermark.png"/>
-    <link data-trunk rel="copy-file" href="/src/image.png"/>
+    <link data-trunk rel="copy-dir" href="/assets/"/>
   </head>
   <body></body>
 </html>
